# tpmEmulator

./: .gitignore  README.md  TPM.hs  build_all.sh  clean_executables.sh  clean_provisioning.sh  cleansandbox.sh  deploy_all.sh  deploy_executables.sh  deploy_provisioning.sh  make_all.sh  restart_tpm.sh  sandboxinit.sh  stack.yaml  stack.yaml.backup  tpm-emulator.cabal  tpmEmulator.cabal
CAProject/: Appraiser.hs  (+4 more)
appraisal/: AppMain.hs  Appraisal.hs  Appraisal.hs~  AppraiserUtil.hs  AppraiserUtil.hs~  appraiser-util.cabal  appraiser-util.cabal~  bApp2  back_caPrivateKey.txt  back_goldenPcrComposite.txt  backupAppReq.txt  backupAttResp.txt  caPrivateKey.txt  caPublicKey.txt  deploy.sh  goldenPcrComposite.txt  stack.yaml
appraisal/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/flag-cache/: appraiser-util-0.1.0.0-2a190d07049cc85ff6644ae2b49882da  appraiser-util-0.1.0.0-332ab9a0089dd00a5d8d002624a85377  appraiser-util-0.1.0.0-84eb863b893b0f38d2cbbec8f4e3b5be  attester-util-0.1.0.0-657258bee34f9a5190b746e7d4eabc74  attester-util-0.1.0.0-91bb41e3bf0ad881533214fd5d3743d1  attester-util-0.1.0.0-db26180ef756b63f7a151c2ce1870c67  bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205  tpm-emulator-1.0.1-44a0412c2b3da00751c0479d97fe5b88  tpm-util-0.1.0.0-8a1927f5dbba11473d127a0590fa398a  tpm-util-0.1.0.0-9d817b27e3465aec01988e5e9a545a46  tpm-util-0.1.0.0-b9a34450df05e48158927165a058e231
appraisal/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/pkgdb/: appraiser-util-0.1.0.0-2a190d07049cc85ff6644ae2b49882da.conf  attester-util-0.1.0.0-657258bee34f9a5190b746e7d4eabc74.conf  bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205.conf  package.cache  tpm-emulator-1.0.1-44a0412c2b3da00751c0479d97fe5b88.conf  tpm-util-0.1.0.0-8a1927f5dbba11473d127a0590fa398a.conf
attestation/: App1.hs  App1.hs~  App2  App2.hs  AttMain.hs  AttesterUtil.hs  AttesterUtil.hs~  BAD_App1.hs  BAD_App2.hs  CAProtoMain.hs  ProtoActions.hs  ProtoActions.hs~  attester-util.cabal  attester-util.cabal~  badApp2  goodApp2  malware_App1.sh  patch_App1.sh  patch_App2.sh  stack.yaml  stack.yaml~
attestation/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/flag-cache/: attester-util-0.1.0.0-4e7bd1a0a52faab571b6e1cbcfcd3b63  attester-util-0.1.0.0-5e63c138b470c30b72bc4facb29d68d8  attester-util-0.1.0.0-657258bee34f9a5190b746e7d4eabc74  attester-util-0.1.0.0-db26180ef756b63f7a151c2ce1870c67  attester-util-0.1.0.0-ef7795e575e9d9a4ecca767d27082877  byteable-0.1.1-38069d1c3de6139ffc8d1d1e85b91030  bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205  cipher-aes-0.2.11-b0008d83bfe63ee0a7fb420107af8060  crypto-cipher-types-0.0.9-6d193c188a0d0c84e4b77e9fc6a8057a  securemem-0.1.9-a378b81412a3f1edf0a5fd8c56dd21c7  tpm-emulator-1.0.1-44a0412c2b3da00751c0479d97fe5b88  tpm-util-0.1.0.0-8a1927f5dbba11473d127a0590fa398a  tpm-util-0.1.0.0-9d817b27e3465aec01988e5e9a545a46  tpm-util-0.1.0.0-b9a34450df05e48158927165a058e231
attestation/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/pkgdb/: attester-util-0.1.0.0-657258bee34f9a5190b746e7d4eabc74.conf  bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205.conf  package.cache  tpm-emulator-1.0.1-44a0412c2b3da00751c0479d97fe5b88.conf  tpm-util-0.1.0.0-8a1927f5dbba11473d127a0590fa398a.conf  tpm-util-0.1.0.0-b9a34450df05e48158927165a058e231.conf
util/: Keys.hs  Main.hs  Provisioning.hs  ProvisioningMain.hs  TPMUtil.hs  oldMain.hs  stack.yaml  tpm-util.cabal
util/.stack-work/install/x86_64-linux-tinfo6/lts-6.31/7.10.3/flag-cache/: bytestring-json-0.0.1-fdd9c5fc4b65b2d7dfbc9a0f027c5242  tpm-emulator-1.0.1-44bec99bc21ba8cbc65fd7158a9f04aa  tpm-emulator-1.0.1-762bdb6fcb52f5516873de690d44c8c5
util/.stack-work/install/x86_64-linux-tinfo6/lts-6.31/7.10.3/pkgdb/: bytestring-json-0.0.1-fdd9c5fc4b65b2d7dfbc9a0f027c5242.conf  package.cache  tpm-emulator-1.0.1-762bdb6fcb52f5516873de690d44c8c5.conf
util/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/flag-cache/: HsOpenSSL-0.11.4.6-c5ff678f6af464e927ca47d15b2adcc5  RSA-2.2.0-d5f84370559b109c865b69260e58bd7f  SHA-1.6.4.2-d3478024f83f41e86f3c202fb3f16f19  aeson-0.11.3.0-76e751f1c054772add6e5dc176026006  asn1-encoding-0.9.5-b7081d198039978315034937fe034fce  asn1-types-0.3.2-378a7f8cfb773110d9fbe172d283a303  attoparsec-0.13.1.0-3dc7a54bb36e05cb0ea028c6e20f992e  base64-bytestring-1.0.0.1-4aa13e7ac7c5b00cc0cd642708d4e148  bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205  cereal-0.5.2.0-7ea4e72fb8e66bdc3b019357750acbe1  crypto-api-0.13.2-5d0ef74e4ca90598c78d80e0a1e2117b  crypto-pubkey-types-0.4.3-bbabe2ad783ab164d169e7fab0626268  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  entropy-0.3.7-fa81611535a5e25c84ec20b88bb2f4b7  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  hashable-1.2.4.0-2f6e980fdeff3f16111d43036e99487a  hourglass-0.2.10-337cca0f9d281b8b30d82ffb2a5abd50  memory-0.13-f7f6527c0721c2b55b50c9a67588b20d  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-2.6.3.1-238267b4d3be4589c14857df316000e3  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  pureMD5-2.1.3-e0ae6152a96aab6b4553868cde2a5329  random-1.1-7d035f9e510822cd64834106e4acc4b7  scientific-0.3.4.9-073378e15125e2eddcb8d4f05f67ab09  semigroups-0.18.2-7b7495970e72c87cbd8992c7afc21dc0  syb-0.6-d154b8ffa473f7cfcfc32ca4d99f62f7  tagged-0.8.4-9a04b6ba5af4681c23b22a393e2724e7  text-1.2.2.1-d0adb978563e9f52dc308d1d0db7212c  tpm-emulator-1.0.1-44a0412c2b3da00751c0479d97fe5b88  tpm-util-0.1.0.0-8a1927f5dbba11473d127a0590fa398a  tpm-util-0.1.0.0-9d817b27e3465aec01988e5e9a545a46  tpm-util-0.1.0.0-b9a34450df05e48158927165a058e231  unordered-containers-0.2.8.0-72e7fa3395855b59fb8ba98cc5a4a8d1  vector-0.11.0.0-299aefb173ce5a731565d31f609a0cfd
util/.stack-work/install/x86_64-linux/lts-6.31/7.10.3/pkgdb/: bytestring-json-0.0.1-f53eee3cf7667bd10dd693f93904b205.conf  package.cache  (+3 more)
util/comm/: Comm.hs  comm.cabal  stack.yaml
util/keys/: Keys.hs  LICENSE  keys.cabal  keys.cabal~  stack.yaml
util/provisioning/: Provisioning.hs  ProvisioningMain.hs  caPrivateKey.txt  caPublicKey.txt  deployProvisioning.sh  goldenPcrComposite.txt  provisioning.cabal  provisioning.cabal~  stack.yaml  stack.yaml~
(+128 files in other folders)
