name:                tpm-emulator
version:             1.0.1
synopsis:            Haskell emulation of TPM (Trusted Platform Module) interface
-- description:
license:             BSD3
license-file:        LICENSE
author:              Wesley Peck
Maintainer:          Adam Petz (ampetz@ittc.ku.edu)
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     TPM,
                       TPM.Admin,
                       TPM.Capability,
                       TPM.Cipher,
                       TPM.Const,
                       TPM.Digest,
                       TPM.Driver,
                       TPM.Error,
                       TPM.Eviction,
                       TPM.Key,
                       TPM.Nonce,
                       TPM.PCR,
                       TPM.Session,
                       TPM.SignTest,
                       TPM.Storage,
                       TPM.Types,
                       TPM.Utils,
                       TPM.Driver.Socket
  -- other-modules:
  other-extensions:    TypeSynonymInstances,
                       FlexibleInstances,
                       DeriveDataTypeable,
                       ExistentialQuantification
  --extra-lib-dirs:      /home/armored/protocolImplementation/protocolImplementation/shared/bytestringJSON/
  
  build-depends:       base,
                       binary,
                       bytestring,
                       random,
                       network,
                       HsOpenSSL,
                       SHA,
                       RSA,
                       crypto-api,
                       aeson,
                       bytestring-json,
                       unordered-containers

  hs-source-dirs:     

  default-language:    Haskell2010
