name:                appraiser-util
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:
license:             BSD3
license-file:        LICENSE
author:              Adam Petz (ampetz@ittc.ku.edu)
maintainer:          ampetz@ittc.ku.edu
copyright:           2017 Adam Petz
--category:
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      ./    
  exposed-modules:     AppraiserUtil
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       SHA,
                       crypto-api,
                       random,
                       cipher-aes,
                       aeson,
                       text,
                       directory,
                       base64-bytestring,                 
                       tpm-emulator,
                       tpm-util,
                       provisioning,
                       keys
		       
executable AppMain

  hs-source-dirs:      ./
  other-modules:       AppraiserUtil
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       aeson,
                       text,
                       directory,
                       base64-bytestring,  
                       RSA,
                       SHA,
                       crypto-api,
                       random,
                       cipher-aes,
                       
                       tpm-emulator,
                       tpm-util,
                       provisioning,
                       keys
		       
  main-is:             AppMain.hs
      		       
  default-language:    Haskell2010

--source-repository head
--type:     git
--location: https://github.com/
