name:                attester-util
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/helloworld#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

--executable AttesterUtil
executable App2

--library
--hs-source-dirs:
  --other-modules:     TPMUtil
  build-depends:       base >= 4.7 && < 5

                       --tpm-emulator
		       
  main-is:            App2.hs

executable App1

--library
--hs-source-dirs:
  --other-modules:     TPMUtil
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       process,

                       tpm-util
		       
  main-is:            App1.hs

library
  hs-source-dirs:      ./    
  exposed-modules:     AttesterUtil
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       SHA,
                       crypto-api,
                       random,
                       cipher-aes,
                       process,
                       
                       tpm-emulator,
                       tpm-util,
                       keys,
                       provisioning
		       
--  main-is:            Main.hs	       		       
  default-language:    Haskell2010

--source-repository head
--type:     git
--location: https://github.com/githubuser/helloworld
