name:                tpm-util
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/helloworld#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

executable ProvisioningMain

--library
--hs-source-dirs:
  other-modules:     TPMUtil, Keys, Provisioning
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       SHA,
                       cipher-aes,
                       crypto-api,
                       random,

                       tpm-emulator
		       
  main-is:            ProvisioningMain.hs	       		       

library
  hs-source-dirs: ./     
  exposed-modules:     TPMUtil, Keys, Provisioning
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       SHA,
                       cipher-aes,
                       crypto-api,
                       random,
                       
                       tpm-emulator
		       
  --main-is:            Main.hs
--source-repository head
--  type:     git
--  location: https://github.com/githubuser/helloworld
  default-language:    Haskell2010