name:                keys
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/helloworld#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10	       		       

library
  hs-source-dirs: ./     
  exposed-modules:     Keys
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       --SHA,
                       --cipher-aes,
                       crypto-api,
                       random,
                       --cryptohash,
                       --cryptonite,
                       --process,
                       
                       tpm-emulator
		       
  --main-is:            Main.hs
--source-repository head
--  type:     git
--  location: https://github.com/githubuser/helloworld
  default-language:    Haskell2010