name:                provisioning
version:             0.1.0.0
--synopsis:
--description:
--homepage:
license:             BSD3
license-file:        LICENSE
author:              Adam Petz (ampetz@ittc.ku.edu)
maintainer:          ampetz@ittc.ku.edu
copyright:           2017 Adam Petz
--category:
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10	       		       

library
  hs-source-dirs:      
  exposed-modules:     Provisioning
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       --SHA,
                       --cipher-aes,
                       crypto-api,
                       random,
                       --cryptohash,
                       --cryptonite,
                       process,
                       directory,
                       
                       tpm-emulator,
                       tpm-util,
                       keys


executable ProvisioningMain
  other-modules:     Provisioning
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       RSA,
                       SHA,
                       cipher-aes,
                       --crypto-api,
                       random,
                       --cryptonite,
                       --cryptohash,
                       process,
                       directory,
                       provisioning,

                       tpm-emulator,
                       tpm-util,
                       keys
		       
  main-is:            ProvisioningMain.hs

--source-repository head
--  type:     git
--  location: https://github.com/
  default-language:    Haskell2010